# zetasql-bigquery-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.gradle  main.py  pyproject.toml  settings.gradle
src/main/java/zetasql/java/: App.java  BigQueryAnalyzer.java  BigQueryAnalzyer.java
src/test/java/zetasql/java/: AppTest.java
zetasql_python/: __init__.py
