[tool.poetry]
name = "zetasql-python"
version = "0.1.0"
description = ""
authors = ["David Young <dmyoung9@asu.edu>"]
readme = "README.md"
packages = [{include = "zetasql_python"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
